# ColorFrame

./: README.md  pyproject.toml
.github/: dependabot.yml
colorframe/: __init__.py  __main__.py  api.py  border.py  utils.py
