[tool.poetry]
name = "colorframe"
version = "0.1.0"
description = "Python utility to add borders to my photography pictures"
authors = ["Felix Soubelet <felix.soubelet@protonmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/fsoubelet/toychain"

[tool.poetry.dependencies]
python = "^3.6"
joblib = ">=0.16,<0.18"
loguru = "^0.5.1"
Pillow = "^7.2.0"

[tool.poetry.dev-dependencies]
mypy = "^0.782"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
