[tool.poetry]
name = "colorframe"
version = "0.2.1"
description = "Python utility to add borders to my photography pictures"
authors = ["Felix Soubelet <felix.soubelet@protonmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/fsoubelet/toychain"

[tool.poetry.dependencies]
python = "^3.7"
joblib = "^1.0"
loguru = "^0.5"
Pillow = "^9.1"
typer = "^0.3"

[tool.poetry.dev-dependencies]
mypy = "^1.4"
typer-cli = "^0.0.11"

[tool.poetry.scripts]
colorframe = "colorframe.__main__:app"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
